fixed styling of blurriness warning and introduced CSS class

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -49,6 +49,17 @@ body {
   background-color: #F5F5F5;
 }
 
+.blur-warning {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .dropzone {
   border: 4px dashed #999999;
   border-radius: 7px;
